[package]
name = "pseudoregalia-rando"
description = "a gamemode for pseudoregalia which shuffles pickups"
repository = "https://github.com/pseudoregalia-modding/pseudoregalia-rando"
version = "1.7.0"
authors = ["spuds"]
edition = "2021"

[dependencies]
eframe = { version = "0.26", default-features = false, features = ["default_fonts", "glow", "persistence"] }
unreal_asset = { git = "https://github.com/astrotechies/unrealmodding", rev = "b64d3f4" }
repak = { git = "https://github.com/trumank/repak", rev = "abda6da", features = ["oodle"] }
strum = { version = "0.25", features = ["derive"] }
rand = "0.8"
egui-modal = "0.3"
rfd = "0.11"
thiserror = "1.0"

[build-dependencies]
winres = "0.1"

[profile.dev.package."*"]
opt-level = 3
